examples/test/testpolicy703.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy703
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key44: value0
      key25: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value33
      podSelector:
        matchLabels:
          key49: value38
          key1: value38
